Add stock notes.
- Added notes field to the stock entity.
- Created database migration file.
- Created Form type.
- Extracted swal form template from panel table template.
- Created Form and RowButton js.
- Installed froala-editor-bundle php package.

--- a/templates/wallets/dashboard.html.twig
+++ b/templates/wallets/dashboard.html.twig
@@ -85,6 +85,35 @@
                 }
             });
 
+            // create stock note form
+            const positionStockNoteswalOptions = window.StockNoteswalOptions;
+
+            // It is use PositionStockNoteForm which translate the position into stock and vise-versa
+            const stockNoteForm = new PositionStockNoteForm(
+                positionStockNoteswalOptions,
+                positionPanelTable,
+                '#js-panel-{{ stock_note_entity_name|lower|replace({' ': '_'}) }}-form-template',
+            );
+
+            const positionStockNoteButtonSwalOptions = {
+                options: positionStockNoteswalOptions.editView,
+                onBeforeOpen: stockNoteForm.onBeforeOpenEditView.bind(stockNoteForm),
+                confirmButtonText: positionStockNoteswalOptions.text.update.confirmButtonText,
+                titleText: positionStockNoteswalOptions.text.update.titleText,
+                confirmTitleText: positionStockNoteswalOptions.text.update.confirmTitleText,
+            };
+            positionStockNoteButtonSwalOptions.options.width = 800;
+
+            const stockNoteRowButton = new StockNoteRowButton(
+                stockNoteForm,
+                positionStockNoteButtonSwalOptions,
+                function (id) {
+                    console.log(id);
+                },
+                '.js-stock-note',
+            );
+            positionPanelTable.addRowButton(stockNoteRowButton);
+
 
             // Create dividend panel instance
             let $dividendPanelBox = $('.js-position-dividend-panel-box');
@@ -114,6 +143,7 @@
 
             const PositionDividendswalOptions = window.PositionDividendswalOptions;
 
+            // dividend form
             const dividendForm = new PositionDividendForm(
                 PositionDividendswalOptions,
                 dividendPanelTable,
