--- a/templates/Components/Panel/panel-table.html.twig
+++ b/templates/Components/Panel/panel-table.html.twig
@@ -166,96 +166,4 @@
     </script>
 {% endif %}
 
-{% if form is defined %}
-    <!-- form panel template -->
-    <script type="text/template" id="js-panel-{{ entity_name|lower|replace({' ': '_'}) }}-form-template">
-        {% set _form_theme = form_theme|default('Components/Form/horizontal-theme-form.html.twig') %}
-    {% form_theme form _form_theme %}
-
-    {{ form_start(form, {'attr': {'id': 'entity-form', 'class': 'form-horizontal js-entity-from' }}) }}
-        <div class="box-body">
-            {{ form_widget(form) }}
-        </div>
-        {{ form_end(form) }}
-    </script>
-
-    <script>
-        // Set up swal confirm options
-        let {{ swalOptionsVariablePrefix|default('') }}deleteViewOptions = {
-            customClass: {
-                confirmButton: 'btn btn-danger',
-                cancelButton: 'btn btn-default',
-                title: 'swal2-confirm-title',
-                content: 'swal2-confirm-content',
-                actions: 'swal2-confirm-actions',
-            },
-            buttonsStyling: false,
-            type: 'warning',
-            width: 500,
-            showCancelButton: true,
-            showLoaderOnConfirm: true,
-            allowOutsideClick: false,
-            showCloseButton: true,
-            position: 'top',
-            confirmButtonText: '{{ 'Delete'|trans }}',
-            titleText: '{{ 'Delete'|trans }} {{ entity_name|trans|title }}',
-            text: '{{ 'Do you want to delete the'|trans }} {{ entity_name|trans|title|lower }} {0}?',
-        };
-
-        // Set up swal confirm options
-        let {{ swalOptionsVariablePrefix|default('') }}swalEditViewOptions = {
-            customClass: {
-                confirmButton: 'btn btn-danger',
-                cancelButton: 'btn btn-default',
-                title: 'swal2-form-title',
-                content: 'swal2-form-content',
-                actions: 'swal2-form-actions',
-            },
-            buttonsStyling: false,
-            width: 600,
-            showCancelButton: true,
-            showLoaderOnConfirm: true,
-            reverseButtons: true,
-            allowEscapeKey: false,
-            allowOutsideClick: false,
-            showCloseButton: true,
-            position: 'top'
-        };
-
-        // Set up toast options, for showing the operation final status at the end.
-        let {{ swalOptionsVariablePrefix|default('') }}swalConfirmOptions = {
-            toast: true,
-            position: 'top',
-            showConfirmButton: false,
-            timer: 3000,
-            customClass: {
-                title: 'swal2-toast-title',
-            }
-        };
-
-        //
-        let {{ swalOptionsVariablePrefix|default('') }}swalTextOptions = {
-            create: {
-                confirmButtonText: '{{ 'Create'|trans }}',
-                titleText: '{{ 'Create new'|trans }} {{ entity_name|trans|title }}',
-                confirmTitleText: '{{ entity_name|trans|title }} {{ 'was created successfully.'|trans }}'
-            },
-            update: {
-                confirmButtonText: '{{ 'Update'|trans }}',
-                titleText: '{{ 'Update'|trans }} {{ entity_name|trans|title }}',
-                confirmTitleText: '{{ entity_name|trans|title }} {{ 'was updated successfully.'|trans }}'
-            },
-            delete: {
-                confirmTitleText: '{{ entity_name|trans|title }} {{ 'was deleted successfully.'|trans }}'
-            }
-        };
-
-        window.{{ swalOptionsVariablePrefix|default('') }}swalOptions = {
-            editView: {{ swalOptionsVariablePrefix|default('') }}swalEditViewOptions,
-            confirm: {{ swalOptionsVariablePrefix|default('') }}swalConfirmOptions,
-            deleteView: {{ swalOptionsVariablePrefix|default('') }}deleteViewOptions,
-            text: {{ swalOptionsVariablePrefix|default('') }}swalTextOptions,
-        }
-    </script>
-{% endif %}
-
+{% include 'Components/Form/swal-from-html.twig' %}
