--- a/templates/wallets/partial/position-box.html.twig
+++ b/templates/wallets/partial/position-box.html.twig
@@ -22,6 +22,13 @@
                     'footer': 0,
                 }%}
                 {% endembed %}
+
+                {% embed 'Components/Form/swal-from-html.twig' with {
+                    'entity_name': stock_note_entity_name,
+                    'form': stock_note_form,
+                    'swalOptionsVariablePrefix': 'StockNote'
+                }%}
+                {% endembed %}
             </div>
             <!-- /.box-body -->
         </div>
