--- a/templates/wallets/dashboard.html.twig
+++ b/templates/wallets/dashboard.html.twig
@@ -25,7 +25,7 @@
 
     {% include 'Components/Panel/panel-table-scripts.html.twig' %}
 
-    <script src="{{ asset('build/wallet_dashboard.js') }}"></script>
+    <script type="text/javascript"  src="{{ asset('build/wallet_dashboard.js') }}"></script>
 
     <script>
         $(document).ready(function() {
