--- a/assets/css/WalletDashboard.scss
+++ b/assets/css/WalletDashboard.scss
@@ -48,3 +48,7 @@ div.js-position-dividend-panel-box {
     width: 50% !important;
   }
 }
+
+.ck-editor__editable_inline {
+  height: 450px !important;
+}
