Save text note coming from Document editor.

--- a/assets/css/DocumentEditor.scss
+++ b/assets/css/DocumentEditor.scss
@@ -42,7 +42,7 @@
 
 .document-editor__editable-container .ck-editor__editable {
   /* Set the dimensions of the "page". */
-  width: 15.8cm;
+  width: 80%;
   min-height: 21cm;
 
   /* Keep the "page" off the boundaries of the container. */
