--- a/templates/wallets/partial/dividend-box.html.twig
+++ b/templates/wallets/partial/dividend-box.html.twig
@@ -1,23 +1,4 @@
 <div class="row">
-    <div class="col-md-12">
-        <div class="box js-coming-dividends-panel">
-            <div class="box-header with-border">
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                    </button>
-                    <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-                </div>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body">
-                <div id="chartContainer" style="height: 300px; width: 100%;"></div>
-                <div class="clear"></div>
-            </div>
-            <!-- /.box-body -->
-        </div>
-    </div>
-</div>
-<div class="row">
     <div class="col-md-8">
         <div class="box js-dividend-panel">
             <div class="box-header no-border">
@@ -139,6 +120,46 @@
                     <!-- /.box-body -->
                 </div>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="box js-coming-dividends-panel">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">{{ 'Invested in Dividends'|trans }}</h3>
+
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        </div>
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="box-body">
+                        <div id="dividend-stock-chart-container" style="height: 300px; width: 100%;"></div>
+                        <div class="clear"></div>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="box js-coming-dividends-panel">
+            <div class="box-header with-border">
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                </div>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+                <div id="dividend-paid-chart-container" style="height: 300px; width: 100%;"></div>
+                <div class="clear"></div>
+            </div>
+            <!-- /.box-body -->
         </div>
     </div>
 </div>
