--- a/templates/wallets/dashboard.html.twig
+++ b/templates/wallets/dashboard.html.twig
@@ -283,12 +283,42 @@
                 limit: 5,
             });
 
+
+            // Create dividend panel instance
+            let $toPayDividendsPanelBox = $('.js-to-pay-dividends-panel-box');
+
+            let toPayDividendsContentWrapper = $toPayDividendsPanelBox.closest('.js-to-pay-dividends-panel');
+            let toPayDividendsEntityType = $toPayDividendsPanelBox.data('entity-type');
+
+            // Create panelTable instance @see assets/js/PanelTable.js
+            let toPayDividendsPanelTable = new PanelTable({
+                entityType: toPayDividendsEntityType,
+                wrapper: toPayDividendsContentWrapper,
+                pagination: false,
+                selectors: {
+                    searchTemplate: '#js-table-{{ wallet_to_pay_dividend_entity_name|lower|replace({' ': '_'}) }}-search-template',
+                    showPerPageTemplate: '#js-table-{{ wallet_to_pay_dividend_entity_name|lower|replace({' ': '_'}) }}-show-per-page-template',
+                    rowTemplate: '#js-table-{{ wallet_to_pay_dividend_entity_name|lower|replace({' ': '_'}) }}-row-template',
+                },
+                sort: function (aPosition, bPosition) {
+                    // Hack to send those stocks do not have dividend to the end of the list.
+                    // When exDate is null the date created is 1970-01-01. In order to send those date to the end of the list
+                    // the date is set to 4019-10-03.
+                    let a = aPosition.stock.toPayDate !== null ? new Date(aPosition.stock.toPayDate) : new Date('4019-10-03');
+                    let b = bPosition.stock.toPayDate !== null ? new Date(bPosition.stock.toPayDate) : new Date('4019-10-03');
+
+                    return a < b ? -1 : a > b ? 1 : 0;
+                },
+                limit: 5,
+            });
+
             let panel = new WalletDashboard(
                 {{ wallet.id }},
                 positionPanelTable,
                 dividendPanelTable,
                 operationPanelTable,
-                comingDividendsPanelTable
+                comingDividendsPanelTable,
+                toPayDividendsPanelTable
             );
 
             panel.render();
