--- a/templates/stocks/partial/view.html.twig
+++ b/templates/stocks/partial/view.html.twig
@@ -43,18 +43,18 @@
             <div class="col-md-7 stock-open-close-day-price-block pull-right">
                 {% embed 'Components/ui/range-slider-show.html.twig' with {
                     'id': 'low-high-day-price',
-                    'min_price': 'dayLow.preciseValue',
-                    'max_price': 'dayHigh.preciseValue',
-                    'current_price': 'value.preciseValue',
+                    'min_price': 'dayLow',
+                    'max_price': 'dayHigh',
+                    'current_price': 'value',
                     'type' : 'Day low/high'|trans|upper,
                     'tmpl': true,
                 } %}
                 {% endembed %}
                 {% embed 'Components/ui/range-slider-show.html.twig' with {
                     'id': 'low-high-52-week-price',
-                    'min_price': 'week52Low.preciseValue',
-                    'max_price': 'week52High.preciseValue',
-                    'current_price': 'value.preciseValue',
+                    'min_price': 'week52Low',
+                    'max_price': 'week52High',
+                    'current_price': 'value',
                     'type' : '52 week low/high'|trans|upper,
                     'tmpl': true,
                 } %}
