--- a/templates/Components/Panel/panel-table.html.twig
+++ b/templates/Components/Panel/panel-table.html.twig
@@ -91,7 +91,7 @@
                     <div class="box-footer no-border js-table-footer">
                         <div class="col-md-12">
                             <div class="pull-left col-sm-6">
-                        <span class="js-table-pagination-info" id="{{ entity_name|lower|replace({' ': '_'}) }}s-pagination-info" role="status" aria-live="polite"
+                        <span class="js-table-pagination-info pull-left" id="{{ entity_name|lower|replace({' ': '_'}) }}s-pagination-info" role="status" aria-live="polite"
                               data-text="{{ 'Showing :from to :to of :of'|trans }} {{ entity_name|lower|replace({'_': ' '}) }}s"></span>
                             </div>
                             <div class="pull-right col-sm-6">
