Fill operation table in wallet dashboard

--- a/templates/wallets/partial/operation-box-2-scripts.html.twig
+++ b/templates/wallets/partial/operation-box-2-scripts.html.twig
@@ -32,7 +32,7 @@
         const OperationswalOptions = window.OperationswalOptions;
         const urlCreate = Routing.generate(
             'wallet_' + entityName + '_new',
-            {'id': walletId }
+            {'walletId': walletId }
         );
 
         // create operation form
