--- a/templates/wallets/dashboard_2.html.twig
+++ b/templates/wallets/dashboard_2.html.twig
@@ -57,6 +57,18 @@
 
             panel.render();
             panel.load();
+
+            // Tweak button toggle main menu to show/hide columns
+            $('.sidebar-toggle').on(
+                'click',
+                function(e) {
+                    let $button = $(e.currentTarget);
+
+                    if ($button.data('toggle') === 'push-menu') {
+                        panel.toggleExpanded();
+                    }
+                }
+            );
         });
     </script>
 
