Disable pagination in position and dividend panel

--- a/templates/wallets/partial/position-box-2-scripts.html.twig
+++ b/templates/wallets/partial/position-box-2-scripts.html.twig
@@ -15,7 +15,7 @@
         return new PanelTable({
             entityType: positionEntityType,
             wrapper: positionContentWrapper,
-            pagination: true,
+            pagination: false,
             selectors: {
                 searchTemplate: '#js-table-' + entityName + '-search-template',
                 showPerPageTemplate: '#js-table-' + entityName + '-show-per-page-template',
