--- a/templates/wallets/partial/position-box-2.html.twig
+++ b/templates/wallets/partial/position-box-2.html.twig
@@ -17,6 +17,7 @@
                     'fields': position.fields,
                     'js_panel_class': 'js-position-panel-box',
                     'border': 0,
+                    'footer': 0,
                     'buttons': position.buttons,
                     'search_width': position.search_width,
                 }%}
