--- a/templates/wallets/partial/position-dividend-box-2-scripts.html.twig
+++ b/templates/wallets/partial/position-dividend-box-2-scripts.html.twig
@@ -10,7 +10,7 @@
         let positionDividendPanel =  new PanelTable({
             entityType: positionDividendEntityType,
             wrapper: positionDividendContentWrapper,
-            pagination: true,
+            pagination: false,
             selectors: {
                 searchTemplate: '#js-table-' + entityName + '-search-template',
                 showPerPageTemplate: '#js-table-' + entityName + '-show-per-page-template',
