--- a/templates/wallets/partial/position-dividend-box-2.html.twig
+++ b/templates/wallets/partial/position-dividend-box-2.html.twig
@@ -20,6 +20,7 @@
                     'search_width': position_dividend.search_width,
                     'panel_header': 0,
                     'header': 0,
+                    'footer': 0,
                     'buttons': position_dividend.buttons,
                     'form': position_dividend.form,
                     'swalOptionsVariablePrefix': 'PositionDividend'
