Fix render column quantity

--- a/templates/Components/Macros/table-render.html.twig
+++ b/templates/Components/Macros/table-render.html.twig
@@ -75,8 +75,9 @@
 
 {# quantity #}
 {% macro render_quantity(value, quantity) %}
-    <% if ({{ quantity }} !== null && {{ quantity }} !== 0) { %>
-        <% if ({{ quantity }} > 0) { %>
+    <% var quantity = {{ quantity }}; %>
+    <% if (quantity !== null && quantity !== 0) { %>
+        <% if (quantity > 0) { %>
             <span class="pull-right text-green"><i class="fa fa-angle-up"></i> <%= {{ value }} %></span>
         <% } else { %>
             <span class="pull-right text-red"><i class="fa fa-angle-down"></i> <%= {{ value }} %></span>
